# robo-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.common  README.md  build.sh  settings.ini
core/: body.h  env.cpp  robot.cpp  robot.h
core/Manager/: Manager.cpp  Manager.h
core/Manager/Render/: GuiMgr.cpp  GuiMgr.h
core/Manager/Test/: TestMgr.h
core/bodies/: differential_robot_body.h  distance_body.cpp  distance_body.h  motor_body.cpp
core/robots/: differential_robot.cpp
editor/tests/diff_robot_arduino/: CMakeLists.txt
sandbox/: common.h  main.cpp  settings.cpp  test.h
sandbox/bodies/: motor_body.h
sandbox/firmware/arduino/: CMakeLists.txt
sandbox/firmware/avr/: CMakeLists.txt
sandbox/firmware/avr/firmware2/: atmega48_ledramp.c
sandbox/robots/: differential_robot.h  robot_def.json
sandbox/sensors/: distance_sensor.cpp
sandbox/tests/diff_robot_arduino/: diff_robot_arduino.cpp  robot_def.json
sandbox/tests/diff_robot_avr/: diff_robot_avr.cpp
src/: CMakeLists.txt  actuator.h  atmega48_ledramp.axf  atmega48_ledramp.c  env.h  ledramp.c  main.cpp  robot.h  sensor.h  td_tire.h
src/actuators/: motor_actuator.cpp  motor_actuator.h
src/bodies/: differential_robot_body.cpp  distance_body.cpp  distance_body.h  motor_body.cpp  motor_body.h
src/robots/: differential_robot.cpp  differential_robot.h
src/sensors/: button_sensor.cpp  button_sensor.h  distance_sensor.cpp  distance_sensor.h
src/tests/: add_pair.cpp
src/tests/simavr_hello/: CMakeLists.txt  actuator.cpp  actuator.h  atmega48_ledramp.c  car.cpp  ledramp.c  ledramp.cpp  ledramp.h  robot.cpp  robot.h  sensor.cpp  sensor.h  simavr_hello.cpp
src/tests/simavr_hello/arduino_firmware/: arduino_firmware.ino
testbed/: main.cpp  test.cpp
testbed/tests/diff_robot_arduino/: diff_robot_arduino.cpp
testbed/tests/diff_robot_arduino/arduino_firmware/: arduino_firmware.ino
testbed/tests/diff_robot_avr/: CMakeLists.txt  diff_robot_avr.cpp
testbed/tests/env_test/: env_test.cpp
